// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature /> renders the <Feature /> with just a sub-title 1`] = `
<div
  class="feature__Container-nhpr3l-0 kKikRC"
>
  <h2
    class="feature__SubTitle-nhpr3l-2 cRPlHJ"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;

exports[`<Feature /> renders the <Feature /> with just a title 1`] = `
<div
  class="feature__Container-nhpr3l-0 kKikRC"
>
  <h1
    class="feature__Title-nhpr3l-1 cmJblx"
  >
    Unlimited films, TV programmes and more.
  </h1>
</div>
`;

exports[`<Feature /> renders the <Feature /> with populated data 1`] = `
<div
  class="feature__Container-nhpr3l-0 kKikRC"
>
  <h1
    class="feature__Title-nhpr3l-1 cmJblx"
  >
    Unlimited films, TV programmes and more.
  </h1>
  <h2
    class="feature__SubTitle-nhpr3l-2 cRPlHJ"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;
